# deepiri-wooven

./: NOTICE  README.md  install.sh  pyproject.toml
.github/codeql/: README.md
deepiri_git_handshake/: cli.py  clone_resolver.py  daemon.py  git_wrapper.py  service.py  transport_prefs.py
deepiri_weft/: __init__.py  cli.py  clone_parser.py  clone_resolver.py  cred_manager.py  credentials.py  daemon.py  forge_credential_helper.py  git_wrapper.py  service.py  ssh_config.py  transport.py  transport_prefs.py  tui.py
packaging/launchd/: com.deepiri.git-handshake.plist  com.deepiri.weft.plist
packaging/systemd/: deepiri-git-handshake.service  deepiri-weft.service
packaging/windows/: install-service.ps1  uninstall-service.ps1
scripts/: smoke.sh
tests/: test_cli_smoke.py  test_clone_parser.py  test_clone_resolver.py  test_cred_manager_io.py  test_forge_helper.py  test_ssh_config.py  test_transport.py  test_transport_prefs.py
