[project]
name = "deepiri-git-handshake"
version = "0.2.0"
description = "TUI + CLI credential vault: SSH/HTTPS profiles, OS keyring PAT, git-credential-dgh, clone by owner/repo"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Team-Deepiri"}]
license = "Apache-2.0"
keywords = ["deepiri", "git", "tui", "clone", "ssh", "https", "credentials", "keyring"]
dependencies = [
    "textual>=0.68.0",
    "keyring>=25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
deepiri-git-handshake = "deepiri_git_handshake.cli:main"
git-handshake = "deepiri_git_handshake.cli:main"
dgh = "deepiri_git_handshake.cli:main"
git-handshake-git = "deepiri_git_handshake.git_wrapper:main"
git-credential-dgh = "deepiri_git_handshake.forge_credential_helper:main"
deepiri-git-handshake-daemon = "deepiri_git_handshake.daemon:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deepiri_git_handshake*"]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
